--- a/app/src/main/res/layout/list_ids_item.xml
+++ b/app/src/main/res/layout/list_ids_item.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+
     <TextView
             android:id="@+id/personId"
             android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
 </androidx.cardview.widget.CardView>
